# ntantivy-py

./: Cargo.toml  Makefile
src/: document.rs  lib.rs  schemabuilder.rs  tokenizer.rs
src/filters/: alpha_num.rs  ascii_fold.rs  language.rs  lowercaser.rs  mod.rs  remove_long.rs  split_compound.rs  stemmer.rs  stop_words.rs
tantivy/: __init__.py  __init__.pyi
