[package]
name = "tantivy"
version = "0.19.2"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.18.0"

[dependencies]
chrono = "0.4.23"
tantivy = "0.19.2"
itertools = "0.10.5"
futures = "0.3.26"
serde_json = "1.0.91"
serde = "1.0.152"
rust-stemmers = "1.2.0"
unicode-normalization = "0.1.22"

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "macro-diagnostics"]
